html/css/style2.css
/* Buttons
===================================== */
.button {
    height: 80px;
    width: 80px;
    text-transform: uppercase;
    background: #10153c;
    border-color: #10153c;
    color: #fff;
}
.button:hover {
    background: #60b646;
    border-color: #60b646;
    color: #fff;
}
.button .banner {
    z-index: -1;
    position: absolute;
    bottom: 15px;
    width: 115px;
    height: 40px;
    margin: 0 0 0 55px;
    padding: 0 15px 0 0;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    text-align: right;
    line-height: 40px;
    font-size: 18px;
    background: #10153c;

    animation: slide-fade-out-left 750ms forwards ease-in-out;
    animation-delay: 5000ms;
}
.button:hover .banner {
    background: #60b646;
}
.round-img-button {
    position: relative;
    display: block;
    padding: 0; margin: 0;
    border: 5px solid;
    border-radius: 50%;
    border-color: #10153c;
}
.round-img-button img {
    z-index: 999;
    display: block;
    width: 50%;
    margin: 18px auto;
}

/* Containers
===================================== */
.call-box {
    z-index: 9999;
    position: fixed;
    bottom: 15px; left: 15px;
    padding: 0; margin: 0;
}

/* Animations
===================================== */
@keyframes slide-fade-out-left {
    20% {
        opacity: 1;
    }
    60% {
        opacity: 0;
    }
    100% {
        opacity: 0;
        transform: translateX(-50px);
    }
}

/* Responsive
===================================== */
@media only screen and (max-width: 767px) {
    .call-box {
        left: 5px; bottom: 5px;
        margin: 0 auto;
    }
    .call-box .button {
        height: 40px;
        width: 40px;
        margin: 0 auto;
    }
    .call-box .round-img-button img {
        width: 60%;
        margin: 6px auto;
    }
    .call-box .button .banner {
        bottom: 5px;
        width: 92px;
        height: 20px;
        margin: 0 0 0 15px;
        padding: 0 15px 0 0;
        line-height: 20px;
        font-size: 12px;
        background: #10153c;

        animation: slide-fade-out-left 750ms forwards ease-in-out;
        animation-delay: 5000ms;
    }
}

